--- a/vignettes/basic_workflow.Rmd
+++ b/vignettes/basic_workflow.Rmd
@@ -1,23 +1,26 @@
 ---
-title: "Basic workflow using rocc"
+title: "Basic workflow using Rocc"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Basic workflow using rocc}
+  %\VignetteIndexEntry{Basic workflow using Rocc}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-devtools::load_all()
+#devtools::load_all()
+library(Rocc)
 library(knitr)
+library(dplyr)
 ```
 
 ## 0. Installing and loading package
 
 ```{r install, eval = FALSE}
 remotes::install_github("liibre/rocc")
-library(rocc)
+library(dplyr)
+library(Rocc)
 ```
 
 ## 1. Download and bind data from different sources
