--- a/vignettes/articles/using_rgbif2.Rmd
+++ b/vignettes/articles/using_rgbif2.Rmd
@@ -15,12 +15,12 @@ knitr::opts_chunk$set(collapse = TRUE,
 
 Installing and loading the package:
 
-`devtools::install_github("saramortara/rocc")`
+`devtools::install_github("liibre/Rocc")`
 
 This package also downloads records from from [GBIF](https://www.gbif.org/) and [jabot](http://jabot.jbrj.gov.br/v3/consulta.php) collections. The function `rgbif2()` encapulates funtions from **rgbif** package to receive a species scientific name and return the output as a .csv file written on disk. 
 
 ```{r setup, echo  = FALSE, message = FALSE}
-#library(rocc)
+#library(Rocc)
 devtools::load_all() # for development
 ```
 
