--- a/vignettes/basic_workflow.Rmd
+++ b/vignettes/basic_workflow.Rmd
@@ -18,7 +18,7 @@ library(dplyr)
 ## 0. Installing and loading package
 
 ```{r install, eval = FALSE}
-remotes::install_github("liibre/rocc")
+remotes::install_github("liibre/Rocc")
 library(dplyr)
 library(Rocc)
 ```
